# backscroll

./: .gitignore  LICENSE  README.md  pyproject.toml
backscroll/: __init__.py  capture.py  cli.py  config.py  db.py  mcp_server.py  ocr.py  recorder.py  utils.py
backscroll/ocr_helper/: BSOCR.swift
